--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- icon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="img/fix-movie.ico" />
 </head>
 <body>
     <!-- header -->
