tambah foto poster

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2>Trending</h2>
         <ul class="cards">
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-1.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-1.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-1.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-1.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-1.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -233,7 +233,7 @@
         <h2>Popular</h2>
         <ul class="cards">
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-2.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -257,7 +257,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-2.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -281,7 +281,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-2.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -305,7 +305,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-2.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -329,7 +329,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-2.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -360,7 +360,7 @@
         <h2>Top Rated</h2>
         <ul class="cards">
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-3.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -384,7 +384,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-3.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -408,7 +408,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-3.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -432,7 +432,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-3.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -456,7 +456,7 @@
             </div>
           </div>
           <div class="wrapper-card">
-            <li class="card">
+            <li class="card" style="background-image: url(img/poster-3.jpg)">
               <div>
                 <div class="card-content">
                   <p>
@@ -486,21 +486,16 @@
     <footer>
       <ul>
         <li>
-          <a href="https://instagram.com" target="_blank">
-            <img src="img/instagram.svg" alt="Instagram Icon" />
-            &nbsp;instagram</a
-          >
+          <a href="https://www.instagram.com/fahmi.Alhafizh" target="_blank">
+            <img src="img/instagram.svg" alt="Instagram Icon" /> &nbsp;Instagram</a>
         </li>
         <li>
-          <a href="https://linkedin.com" target="_blank"
-            ><img src="img/linkedin.svg" alt="linkedin Icon" />
-            &nbsp;linkedin</a
-          >
+          <a href="https://linkedin.com" target="_blank">
+            <img src="img/linkedin.svg" alt="linkedin Icon" /> &nbsp;LinkedIn</a>
         </li>
         <li>
-          <a href="https://github.com" target="_blank"
-            ><img src="img/github.svg" alt="github Icon" /> &nbsp;github</a
-          >
+          <a href="https://www.github.com/fahmsi" target="_blank">
+            <img src="img/github.svg" alt="github Icon" /> &nbsp;GitHub</a>
         </li>
       </ul>
     </footer>
